# university

./: LICENSE  README.md
algorithms/cpp_structures/: binary_search_tree.cpp  heaphop.cpp  red-black-tree.cpp
algorithms/extra/: merge_sort.c
algorithms/first_contest/: a.c  b.c  c.c  d.c  e.c  f.c  g.c
algorithms/recursions/: factorial.c  fib.c  pal.c  printing.c  sm.c
algorithms/searches/: binary_search.c  exponential_search.c  interpolation_search.c  linear_search.c  ternary_search.c
algorithms/second_contest/: MM.c  a.c  b.c  c.c  e.c  f.c  g.c  h.c  i.c  j.c  k.c  l.c
algorithms/simple_structures/: forwarded_list.c  main.c  one_forward_list.c  two_forwarded_list.c
algorithms/sortings/: bubble_sort.c  bucket_sort.c  counting_sort.c  insertion_sort.c  merge_sort.c  quick_sort.c  selection_sort.c
algorithms/testing/: msd.c  qsort.c  two_linked_list.c
c_language/: README.md
c_language/HomeWork_1/: second.c
c_language/HomeWork_2/: second.c
c_language/HomeWork_3/: matrix.c  second.c
c_language/HomeWork_4/: calc_2.h  calcs.c
c_language/HomeWork_5/: main.c
c_language/classwork_1/: dinamic.c
c_language/cmake_test/: CMakeLists.txt
c_language/cmake_test/include/: math_functions.h
c_language/cmake_test/src/: math_functions.cpp
c_language/lab_work_1/: a.out  main.c  (+2 more)
cpp_language/: main.cpp
cpp_language/minesweeper/: CMakeLists.txt
cpp_language/minesweeper/include/: bruteforce.h  minesweeper_funcs.h  terminal_config.h
cpp_language/minesweeper/src/: bruteforce.cpp  main.cpp  minesweeper_funcs.cpp  terminal_config.cpp
olimps/: main.cpp
(+96 files in other folders)
